syntax = "proto3";

option go_package = "./proto";

import "google/protobuf/empty.proto";
package proto;

service ExpenseService {
  rpc addExpense (Expense) returns (google.protobuf.Empty);
  rpc updateExpense (ExpenseChange) returns (google.protobuf.Empty);
  rpc deleteExpense (ExpenseID) returns (google.protobuf.Empty);
  rpc fetchExpense (ExpenseID) returns (UserExpense);
}

message UserExpense {
  string description = 3;
  float totalExpense = 4;
}

message Expense {
  string userID = 1;
  string groupID = 2;
  string description = 3;
  float totalExpense = 4;
}

message ExpenseChange {
  string ExpenseID = 1;
  string description = 2;
  float totalExpense = 3;
}

message ExpenseID {
  string ExpenseID = 1;
}
